--- a/README
+++ b/README
@@ -1,2 +1,3 @@
 " use encoding
+" see image http://cdn-ak.f.st-hatena.com/images/fotolife/o/osyo-manga/20111216/20111216145138.png
 set encoding=utf-8
